--- a/FL11_HW2/homework/css/style.css
+++ b/FL11_HW2/homework/css/style.css
@@ -25,8 +25,8 @@
 		letter-spacing: 1px;
 		word-spacing: 25px;
 				
-		/*transform: rotateY(360deg);
-		transition: 3s;		*/
+		transform: rotateY(360deg);
+		transition: 3s;
 	}
 	
 	section {
